# project-genai

./: compose.yaml  kong.yml
config/: kong.json  kong.yml
inventory_service/: Dockerfile.dev  compose.yaml  create-kafka-topics.sh  pyproject.toml
inventory_service/components/: kafka.yaml  kafka.yaml 
inventory_service/inventory_service/: crud.py  db.py  main.py  models.py  schemas.py  settings.py
kong/: kong.yml
notification_service/: Dockerfile.dev  compose.yaml  pyproject.toml  test_twilio_sms.py
notification_service/components/: kafka.yaml  kafka.yaml 
notification_service/notification_service/: crud.py  db.py  main.py  models.py  schemas.py  settings.py
order_service/: Dockerfile.dev  compose.yaml  create-kafka-topics.sh  pyproject.toml
order_service/components/: kafka.yaml  kafka.yaml 
order_service/order_service/: crud.py  db.py  main.py  models.py  (+1 more)
payment_service/: Dockerfile.dev  compose.yaml  pyproject.toml
payment_service/components/: kafka.yaml  kafka.yaml 
payment_service/payment_service/: crud.py  main.py  models.py  payment.html  schemas.py  settings.py
payment_service/payment_service/kafka/: consumer.py  payment.proto  payment_pb2.py  producer.py
product_service/: Dockerfile.dev  Dockerfile.pd  compose.yaml  pyproject.toml  topic.sh  wait-for-it.sh
product_service/components/: kafka.yaml  kafka.yaml 
product_service/product_service/: crud.py  main.py  models.py  schemas.py
product_service/product_service/kafka/: .proto  _pb2.py  consumer.py  producer.py
user_services/: .env  Dockerfile.dev  compose.yaml  pyproject.toml
(+26 files in other folders)
